# thomas-rehn-sympol

./: AUTHORS  CMakeLists.txt  revision.h.in
contrib/: test-sympol.pl
data/voronoi_cones/: d4.ine  d5.ine  e6.ine  e7.ine
man/: sympol.1
sympol/: CMakeLists.txt  automorphismcomputation.cpp  automorphismcomputation.h  common.h  config.h.in  configuration.cpp  configuration.h  facesuptosymmetrylist.cpp  facesuptosymmetrylist.h  facewithdata.h  polyhedron.cpp  polyhedron.h  polyhedrondatastorage.cpp  polyhedronio.cpp  polyhedronio.h  qarray.cpp  qarray.h  raycomputation.h  raycomputationcdd.cpp  raycomputationcdd.h  raycomputationlrs.cpp  raycomputationlrs.h  recursionstrategy.cpp  recursionstrategy.h  symmetrycomputation.cpp  symmetrycomputationadm.cpp  symmetrycomputationidm.cpp  sympol.cpp  sympol.cpp.orig  test-matrix.cpp  test1.cpp
sympol/matrix/: matrix.h  rank.h
sympol/yal/: logger.h
